styled and eddited the footer

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
             </section>
 
-            <section class="service-section section-top-pd">
+            <section class="service-section section-top-pd ">
                 <h1 class="mg-bottom">What do You Get From Us</h1>
                 <article class="card-div flex">
                     <article>
@@ -295,91 +295,97 @@
 
             <section class="testimonial-section">
                 <h3>Testimonials</h3>
-                <article>
 
-                    <div class=" review review-one">
+                <article class="flex">
+                    <article class="testimony testmony-one">
+                        <img class="angle" src="assets/angle.svg" alt="">
                         <div class="top flex">
                             <div class="image-section">
-                                <img src="images/image2.png" alt="linux">
+                                <img src="assets/friskidia.jpg" alt="linux">
                             </div>
                             <div class="title">
-                                <h4>Friskidia</h4>
+                                <h6>Friskidia</h6>
                                 <p>Client</p>
-                                <img src="assets/unsplash_-RBuQ2PK_L8 (1).png" alt="">
                             </div>
                         </div>
+                        <img src="assets//stars.svg" alt="">
                         <div class="text">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum dapibus luctus. “
+                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum dapibus luctus.“
                             </p>
                         </div>
-                    </div>
-                </article>
-                <article>
-                    <div class=" review review-two">
+                    </article>
+
+
+                    <article class="testimony testimony-two">
+                        <img class="angle" src="assets/angle.svg" alt="">
                         <div class="top flex">
                             <div class="image-section">
-                                <img src="assets/unsplash_B4TjXnI0Y2c.png" alt="linux">
+                                <img src="assets/finkidia.jpg" alt="linux">
                             </div>
                             <div class="title">
-                                <h4>Frinkidia</h4>
+                                <h6>Frinkidia</h6>
                                 <p>Cleint</p>
-                                <img src="assets/Shape.svg" alt="">
                             </div>
+
                         </div>
+                        <img src="assets//stars.svg" alt="">
                         <div class="text">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum dapibus luctus. “
+                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum dapibus luctus.“
                             </p>
                         </div>
-                    </div>
+                    </article>
+
                 </article>
 
             </section>
         </main>
 
-        <footer>
-            <div>
-                <div class="footer-logo">
-                    <img src="assets/logo.svg" alt="">
-                    <p>MangcodingStore</p>
+        <footer class="flex pd-60">
+            <div class="footer-left">
+                <div class="footer-logo flex">
+                    <img src="assets/Logo.svg" alt="">
+                    <p>mangcodingStore</p>
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mollis, justo nec porttitor auctor, erat
+                <p class="txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mollis, justo nec porttitor
+                    auctor, erat
                     sapien faucibus lectus, vel tempor dolor augue et lectus. </p>
                 <div class="socials">
-                    <img src="assets/socials/facebook.png" alt="">
-                    <img src="assets/socials/twetter.png" alt="">
-                    <img src="assets//socials/linkedin.png" alt="">
-                    <img src="assets/socials/instagram.png" alt="">
+                    <img src="assets/socials/facebook.svg" alt="">
+                    <img src="assets/socials/twetter.svg" alt="">
+                    <img src="assets//socials/linkedin.svg" alt="">
+                    <img src="assets/socials/instagram.svg" alt="">
                 </div>
             </div>
+            <div class="flex right">
+                <div>
+                    <h6>Home</h6>
+                    <p>Product</p>
+                    <p>Course</p>
+                    <p>About Us</p>
+                    <p>Login </p>
+                </div>
 
-            <div>
-                <h4>Home</h4>
-                <p>Product</p>
-                <p>Course</p>
-                <p>About Us</p>
-                <p>Login </p>
-            </div>
+                <div>
+                    <h6>Courses</h6>
+                    <p>HTML & CSS</p>
+                    <p>Javascript</p>
+                    <p>Photography</p>
+                    <p>Deisgn Graphics</p>
 
-            <div>
-                <h4>Courses</h4>
-                <p>HTML & CSS</p>
-                <p>Javascript</p>
-                <p>Photography</p>
-                <p>Deisgn Graphics</p>
+                </div>
 
-            </div>
+                <div>
+                    <h6>Articles</h6>
+                    <p>New</p>
+                    <p>Old</p>
+                    <p>Trend</p>
+                    <p>Popular</p>
+                </div>
 
-            <div>
-                <h4>Articles</h4>
-                <p>New</p>
-                <p>Old</p>
-                <p>Trend</p>
-                <p>Popular</p>
-            </div>
-
-            <div>
-                <h4>Contact Us</h4>
-                <p>CCdoc123@gmail.com</p>
+                <div>
+                    <h6>Contact Us</h6>
+                    <p>CCdoc123@gmail.com</p>
+                </div>
             </div>
 
         </footer>
