styled and eddited testimonial section

--- a/index.html
+++ b/index.html
@@ -296,11 +296,11 @@
             <section class="testimonial-section">
                 <h3>Testimonials</h3>
 
-                <article class="flex">
-                    <article class="testimony testmony-one">
-                        <img class="angle" src="assets/angle.svg" alt="">
-                        <div class="top flex">
-                            <div class="image-section">
+                <article class="flex test-flex">
+                    <article class="testimony left-testimony">
+                        <img class="angle left-angle" src="assets/angle.svg" alt="">
+                        <div class="flex picture">
+                            <div class="image-section top-test">
                                 <img src="assets/friskidia.jpg" alt="linux">
                             </div>
                             <div class="title">
@@ -308,32 +308,37 @@
                                 <p>Client</p>
                             </div>
                         </div>
-                        <img src="assets//stars.svg" alt="">
-                        <div class="text">
-                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum dapibus luctus.“
+                        <img class="star" src="assets//stars.svg" alt="">
+                        <div class="test-footer">
+                            <p class="last-paragraph">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                                rutrum
+                                dapibus luctus.“
                             </p>
                         </div>
                     </article>
 
 
-                    <article class="testimony testimony-two">
-                        <img class="angle" src="assets/angle.svg" alt="">
-                        <div class="top flex">
-                            <div class="image-section">
+                    <article class="testimony right-testimony">
+                        <img class="angle right-angle" src="assets/angle.svg" alt="">
+                        <div class="flex picture">
+                            <div class="image-section top-test">
                                 <img src="assets/finkidia.jpg" alt="linux">
                             </div>
                             <div class="title">
                                 <h6>Frinkidia</h6>
                                 <p>Cleint</p>
                             </div>
-
                         </div>
-                        <img src="assets//stars.svg" alt="">
-                        <div class="text">
-                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum dapibus luctus.“
+
+                        <img class="star" src="assets//stars.svg" alt="">
+                        <div class="test-footer">
+                            <p class="last-paragraph">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                                rutrum
+                                dapibus luctus.“
                             </p>
                         </div>
                     </article>
+                </article>
 
                 </article>
 
