checking from nav to footer

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                 <div class="nav-buttons flex">
                     <button class="login blue-txt">Log in</button>
-                    <button class="register blue-bg">Register</button>
+                    <button class="register">Register</button>
                 </div>
 
             </navbar>
@@ -134,7 +134,7 @@
                 <article>
 
                     <div class="stat-text">
-                        <p class="top sub-mg-bottom ">SELECTED COURSE</p>
+                        <p class="selected-course sub-mg-bottom ">SELECTED COURSE</p>
                         <h3 class="sub-mg-bottom">People Taking Courses</h3>
                         <p class="sub-mg-bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
                             dignissim,
@@ -160,7 +160,7 @@
                 </article>
             </section>
 
-            <section class="courses-section">
+            <section class="courses-section pd-60">
                 <article class="course">
                     <div class="course-img course-one">
                         <div class="best">
