update on container element

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <main>
             <section class="hero-section pd-top pd-60 flex pd-bottom ">
-                <article>
+                <article class="hero-top">
                     <div class="text-section">
                         <p class="mg-bottom blue-txt">Let’s <span class="blue-txt mg-bottom">Begin</span> </p>
                         <h1 class="mg-bottom">Let's Find The Right <span class="blue-txt mg-bottom">Course </span>For
@@ -75,7 +75,7 @@
                     </div>
                 </article>
 
-                <article>
+                <article class="hero-bottom">
                     <div class="image-section">
                         <img src="assets/Group 6 (2).png" alt="">
                     </div>
@@ -99,7 +99,7 @@
 
                     <article>
                         <div class="card card-two blue-bg">
-                            <div class="icon icon-two ">
+                            <div class="icon icon-two sub-mg-bottom ">
                                 <img src="assets/Group 1702.svg" alt="">
                             </div>
                             <h4 class="sub-mg-bottom">Course Certificate</h4>
@@ -125,13 +125,13 @@
             </section>
 
             <section class="stat-section blue-bg flex section-top-pd">
-                <article>
+                <article class="stat-left">
                     <div class="stats-image">
                         <img src="assets/Group 1964.png" alt="">
                     </div>
                 </article>
 
-                <article>
+                <article class="stat-right">
 
                     <div class="stat-text">
                         <p class="selected-course sub-mg-bottom ">SELECTED COURSE</p>
