--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <header>
-            <navbar class="nav flex pd-60">
+            <navbar class="nav flex padding">
 
                 <div class="logo flex center-align">
                     <img src="assets/Logo.svg" alt="">
@@ -40,7 +40,7 @@
         </header>
 
         <main>
-            <section class="hero-section pd-top pd-60 flex pd-bottom ">
+            <section class="hero-section padding pd-60 flex pd-bottom ">
                 <article class="hero-top">
                     <div class="text-section">
                         <p class="mg-bottom blue-txt">Let’s <span class="blue-txt mg-bottom">Begin</span> </p>
