updated the hero section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </header>
 
         <main>
-            <section class="hero-section padding pd-60 flex pd-bottom ">
+            <section class="hero-section padding  padding-top flex pd-bottom ">
                 <article class="hero-top">
                     <div class="text-section">
                         <p class="mg-bottom blue-txt">Let’s <span class="blue-txt mg-bottom">Begin</span> </p>
