updted hero, services,  courses section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </header>
 
         <main>
-            <section class="hero-section padding  padding-top flex pd-bottom ">
+            <section class="hero-section padding padding-top flex pd-bottom ">
                 <article class="hero-top">
                     <div class="text-section">
                         <p class="mg-bottom blue-txt">Let’s <span class="blue-txt mg-bottom">Begin</span> </p>
@@ -83,7 +83,7 @@
 
             </section>
 
-            <section class="service-section section-top-pd ">
+            <section class="service-section padding section-top-pd ">
                 <h1 class="mg-bottom">What do You Get From Us</h1>
                 <article class="card-div flex">
                     <article>
