updated all sections

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 </article>
             </section>
 
-            <section class="testimonial-section">
+            <section class="testimonial-section padding">
                 <h3>Testimonials</h3>
 
                 <article class="flex test-flex">
@@ -362,7 +362,7 @@
                 </div>
             </div>
             <div class="flex right">
-                <div>
+                <div class="home">
                     <h6>Home</h6>
                     <p>Product</p>
                     <p>Course</p>
@@ -370,7 +370,7 @@
                     <p>Login </p>
                 </div>
 
-                <div>
+                <div class="courses">
                     <h6>Courses</h6>
                     <p>HTML & CSS</p>
                     <p>Javascript</p>
@@ -379,7 +379,7 @@
 
                 </div>
 
-                <div>
+                <div class="articles">
                     <h6>Articles</h6>
                     <p>New</p>
                     <p>Old</p>
@@ -387,7 +387,7 @@
                     <p>Popular</p>
                 </div>
 
-                <div>
+                <div class="contact">
                     <h6>Contact Us</h6>
                     <p>CCdoc123@gmail.com</p>
                 </div>
