--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 </article>
             </section>
 
-            <section class="courses-section pd-60">
+            <section class="courses-section padding">
                 <article class="course">
                     <div class="course-img course-one">
                         <div class="best">
@@ -308,7 +308,7 @@
                                 <p>Client</p>
                             </div>
                         </div>
-                        <img class="star" src="assets//stars.svg" alt="">
+                        <img class="star" src="assets/stars.svg" alt="">
                         <div class="test-footer">
                             <p class="last-paragraph">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
                                 rutrum
@@ -345,15 +345,16 @@
             </section>
         </main>
 
-        <footer class="flex pd-60">
+        <footer class="flex padding">
             <div class="footer-left">
-                <div class="footer-logo flex">
+                <div class="footer-logo-section flex">
                     <img src="assets/Logo.svg" alt="">
                     <p>mangcodingStore</p>
                 </div>
                 <p class="txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mollis, justo nec porttitor
                     auctor, erat
                     sapien faucibus lectus, vel tempor dolor augue et lectus. </p>
+
                 <div class="socials">
                     <img src="assets/socials/facebook.svg" alt="">
                     <img src="assets/socials/twetter.svg" alt="">
@@ -361,6 +362,7 @@
                     <img src="assets/socials/instagram.svg" alt="">
                 </div>
             </div>
+
             <div class="flex right">
                 <div class="home">
                     <h6>Home</h6>
