--- a/index.html
+++ b/index.html
@@ -364,35 +364,35 @@
             </div>
 
             <div class="flex right">
-                <div class="home">
-                    <h6>Home</h6>
-                    <p>Product</p>
-                    <p>Course</p>
-                    <p>About Us</p>
-                    <p>Login </p>
-                </div>
+                <ul class="home">
+                    <li class="head">Home</li>
+                    <li>Product</li>
+                    <li>Course</li>
+                    <li>About Us</li>
+                    <li>Login </li>
+                </ul>
 
-                <div class="courses">
-                    <h6>Courses</h6>
-                    <p>HTML & CSS</p>
-                    <p>Javascript</p>
-                    <p>Photography</p>
-                    <p>Deisgn Graphics</p>
+                <ul class="courses">
+                    <li class="head">Courses</li>
+                    <li>HTML & CSS</li>
+                    <li>Javascript</li>
+                    <li>Photography</li>
+                    <li>Design Graphics</li>
 
-                </div>
+                </ul>
 
-                <div class="articles">
-                    <h6>Articles</h6>
-                    <p>New</p>
-                    <p>Old</p>
-                    <p>Trend</p>
-                    <p>Popular</p>
-                </div>
+                <ul class="articles">
+                    <li class="head">Articles</li>
+                    <li>New</li>
+                    <li>Old</li>
+                    <li>Trend</li>
+                    <li>Popular</li>
+                </ul>
 
-                <div class="contact">
-                    <h6>Contact Us</h6>
-                    <p>CCdoc123@gmail.com</p>
-                </div>
+                <ul class="contact">
+                    <li class="head">Contact Us</li>
+                    <li>CCdoc123@gmail.com</li>
+                </ul>
             </div>
 
         </footer>
