--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         </main>
 
         <footer class="flex padding">
-            <div class="footer-left">
+            <div class="footer-left left">
                 <div class="footer-logo-section flex">
                     <img src="assets/Logo.svg" alt="">
                     <p>mangcodingStore</p>
