--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <navbar class="nav flex padding">
 
                 <div class="logo flex center-align">
-                    <img src="assets/Logo.svg" alt="">
+                    <img src="assets/Logo.svg" alt="logo">
                     <p class="blue-txt">mangcoding Store</p>
                 </div>
 
@@ -40,7 +40,7 @@
         </header>
 
         <main>
-            <section class="hero-section padding padding-top flex pd-bottom ">
+            <section class="hero-section padding flex ">
                 <article class="hero-top">
                     <div class="text-section">
                         <p class="mg-bottom blue-txt">Let’s <span class="blue-txt mg-bottom">Begin</span> </p>
@@ -58,8 +58,6 @@
                             <button class="register">
                                 <strong>Register</strong>
                             </button>
-
-
 
                             <button class="play flex">
                                 <div class=" polygon yellow-bg flex">
@@ -124,7 +122,7 @@
 
             </section>
 
-            <section class="stat-section blue-bg flex section-top-pd">
+            <section class="stat-section flex section-top-pd">
                 <article class="stat-left">
                     <div class="stats-image">
                         <img src="assets/Group 1964.png" alt="">
@@ -160,7 +158,7 @@
                 </article>
             </section>
 
-            <section class="courses-section padding">
+            <section class="courses-section padding ">
                 <article class="course">
                     <div class="course-img course-one">
                         <div class="best">
@@ -293,7 +291,7 @@
                 </article>
             </section>
 
-            <section class="testimonial-section padding">
+            <section class="testimonial-section">
                 <h3>Testimonials</h3>
 
                 <article class="flex test-flex">
