testomial and footer update

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 </article>
             </section>
 
-            <section class="courses-section padding ">
+            <section class="courses-section ">
                 <article class="course">
                     <div class="course-img course-one">
                         <div class="best">
