make is to be responsive on small screen

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="preconnect" href="https://fonts.googleapis.com">
+<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
     href="https://fonts.googleapis.com/css2?family=Inter&family=Poppins:wght@400;500;700&family=Roboto:wght@400;900&display=swap"
-    rel="stylesheet">
+    rel="stylesheet"> -->
 <link rel="stylesheet" href="styles.css">
 
 <head>
@@ -347,7 +347,7 @@
             <div class="footer-left left">
                 <div class="footer-logo-section flex">
                     <img src="assets/Logo.svg" alt="">
-                    <p>mangcodingStore</p>
+                    <p class="logo-txt">mangcodingStore</p>
                 </div>
                 <p class="txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mollis, justo nec porttitor
                     auctor, erat
